name:                retry-unliftio

description:
        
        This package is retry switched unliftio

version:             0.1.0.0
synopsis:            Retry combinators for monadic actions that may fail
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
copyright:           Ozgun Ataman, Soostone Inc
category:            Control
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/kwhrstr/retry-unliftio
extra-source-files:
  README.md
  changelog.md

flag lib-Werror
  default: False
  manual: True

library
  exposed-modules:     UnliftIO.Retry
  build-depends:
      base                 >= 4.8 && < 5
    , ghc-prim
    , random               >= 1
    , transformers
    , unliftio             == 0.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall


test-suite test
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    hs-source-dirs: test,src
    ghc-options:    -threaded
    other-modules:  UnliftIO.Retry
                    Tests.UnliftIO.Retry
    build-depends:
        base              ==4.*
      , exceptions
      , transformers
      , random
      , time
      , HUnit              >= 1.2.5.2
      , tasty
      , tasty-hunit
      , tasty-hedgehog
      , hedgehog
      , stm
      , ghc-prim
      , mtl
      , unliftio             ==0.2.*
    default-language: Haskell2010

    if flag(lib-Werror)
      ghc-options: -Werror

    ghc-options: -Wall

source-repository head
  type:     git
  location: git://github.com/Soostone/retry.git
